--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title"></div>
+        <div id="unity-build-title">musicgame</div>
       </div>
     </div>
     <script>
@@ -63,7 +63,7 @@
         codeUrl: buildUrl + "/build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ponkansaseme",
-        productName: "musicgame",
+        productName: "",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
