--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         codeUrl: buildUrl + "/build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ponkansaseme",
-        productName: "",
+        productName: "musicgame",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
